--- a/src/app/landing-page/components/landing-page/landing-page.component.html
+++ b/src/app/landing-page/components/landing-page/landing-page.component.html
@@ -4,8 +4,8 @@
     <input type="email" id="emailInput" name="userEmail" [(ngModel)]="userEmail" >
     <button type="submit">Ok!</button>
   </form>
-  <img src="assets/snap-face.png" alt="SnapFace logo">
+  <img src="../../../../assets/snap-face.png" alt="SnapFace logo">
   <div class="landing-links">
-    <button (click)="onRetourn()" > Continuer vers SnapsFace</button>
+    <button (click)="onContinuer()" > Continuer vers SnapsFace</button>
   </div>
 </div>
