--- a/src/app/face-snaps/components/face-snap-list/face-snap-list.component.html
+++ b/src/app/face-snaps/components/face-snap-list/face-snap-list.component.html
@@ -1,5 +1,5 @@
 
 <app-face-snap
-  *ngFor="let faceSnap of snaps "
+  *ngFor="let faceSnap of faceSnaps$ | async"
   [faceSnap]="faceSnap">
 </app-face-snap>
