--- a/src/app/face-snaps/components/single-face-snap/single-face-snap.component.html
+++ b/src/app/face-snaps/components/single-face-snap/single-face-snap.component.html
@@ -1,11 +1,11 @@
-<div class="face-snap-card " [ngClass]="{  snapped:  snapped === true}">
+<div class="face-snap-card " *ngIf="faceSnap$ | async as faceSnap" [ngClass]="{  snapped:  snapped === true}">
   <h2>{{ faceSnap.title | uppercase }}</h2>
   <a routerLink="/facesnaps">Back</a>
   <p>Mise en ligne le {{faceSnap.date | date: 'd MMMM yyyy, à HH:mm'}}</p>
   <p>{{faceSnap.description}}</p>
   <p *ngIf="faceSnap.location">Photo prise à  {{ faceSnap.location}}</p>
   <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
-  <p> <button (click)="onSnap()">{{snapped ? "Oops, unShnap!" : "Oh snap!"}}</button>
+  <p> <button (click)="onSnap(faceSnap.id)">{{snapped ? "Oops, unShnap!" : "Oh snap!"}}</button>
     <span [ngStyle]="{ color : 'rgb(0,'+faceSnap.snaps+',0)'}">🤌 {{faceSnap.snaps}}</span></p>
 
 </div>
